# FastApi-XmlRPC

./: main.py  middleware.py  pyproject.toml  req.txt  routing.py
app/: errors.py
app/endpoints/: eps.py
app/main/endpoints/: eps.py
app/main/endpoints/dependencies/: common.py
app/main/schemas/: eps.py
app/schemas/: eps.py
app/sub/endpoints/: sub.py
fastapi_xmlrpc/: errors.py  exceptions.py  middleware.py  parser.py  responses.py  routing.py  schemas.py  settings.py
fastapi_xmlrpc/parser/: parser.py
open_api/: __init__.py  custom_openapi.py  schema_generator.py  schemas.py
