[tool.poetry]
name = "fastapi-xmlrpc"
version = "0.1.0"
description = ""
authors = ["Vitalik <vzaharkiv28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.1"
aiohttp-xmlrpc = "1.5.0"
aiosignal = "1.2.0"
anyio = "3.5.0"
asgiref = "3.5.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
charset-normalizer = "2.0.12"
click = "8.0.4"
fastapi = "0.75.0"
frozenlist = "1.3.0"
h11 = "0.13.0"
httptools = "0.4.0"
idna = "3.3"
iniconfig = "1.1.1"
lxml = "4.8.0"
multidict = "6.0.2"
packaging = "21.3"
pluggy = "1.0.0"
py = "1.11.0"
pydantic = "1.9.0"
pyparsing = "3.0.7"
pytest = "7.1.1"
python-dotenv = "0.19.2"
PyYAML = "6.0"
sniffio = "1.2.0"
starlette = "0.17.1"
tomli = "2.0.1"
typing-extensions = "4.1.1"
uvicorn = "0.17.6"
uvloop = "0.16.0"
watchgod = "0.8.1"
websockets = "10.2"
yarl = "1.7.2"
orjson = "^3.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
